# license-recognition

./: README.md  enhance.py  pyproject.toml  remove.py  requirements.txt  test.py  vote.py
